links mistakes and tables 1-54

--- a/spells/анимировать-мертвого.md
+++ b/spells/анимировать-мертвого.md
@@ -1,23 +1,27 @@
 
 # Анимировать Мертвого
 
-| | |
-|---|---|
-|Тип|Некромантия [Зло]|
-|Уровень| Жр 3, Маг/Чар 4, Смерть 3|
-|Компоненты| В, С, М|
-|Время Активации| 1 стандартн. действ.|
-|Диапазон| Касание|
-|Цели| Один или более касаемых трупов|
-|Длительность| Мгновенно|
-|Спасброски| Нет|
-|Устойчивость к Магии| Нет|
-|Материальный компонент| Вы должны поместить черный оникс не менее чем за 25 зм за Кубик Хит-Поинтов в рот или в глазную ямку каждого трупа. Магия этого заклинания делает эти камни бесполезными, выжженными оболочками.|
+|                        |                                                                                                                                                                                                  |
+| ---------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| Тип                    | Некромантия [Зло]                                                                                                                                                                                |
+| Уровень                | Жр 3, Маг/Чар 4, Смерть 3                                                                                                                                                                        |
+| Компоненты             | В, С, М                                                                                                                                                                                          |
+| Время Активации        | 1 стандартн. действ.                                                                                                                                                                             |
+| Диапазон               | Касание                                                                                                                                                                                          |
+| Цели                   | Один или более касаемых трупов                                                                                                                                                                   |
+| Длительность           | Мгновенно                                                                                                                                                                                        |
+| Спасброски             | Нет                                                                                                                                                                                              |
+| Устойчивость к Магии   | Нет                                                                                                                                                                                              |
+| Материальный компонент | Вы должны поместить черный оникс не менее чем за 25 зм за Кубик Хит-Поинтов в рот или в глазную ямку каждого трупа. Магия этого заклинания делает эти камни бесполезными, выжженными оболочками. |
 
-Это заклинание превращает кости или тела умерших созданий в оживленных скелетов или зомби, которые подчиняются вашим словесным командам. Нежить может следовать за вами, оставаться на определённом месте или атаковать любое существо (или только специфические типы существ) входящие в неё. Поднятые мертвецы остаются до тех пор, пока их не уничтожат. (Уничтоженного скелета или зомби нельзя снова оживить.) За одну активацию заклинания анимировать мертвого независимо от типа мертвеца, вы не можете создать КХП нежити больше, чем ваш двойной уровень заклинателя. (Заклинание осквернить, смотрите стр. 244, удваивает это количество). Нежить, которую вы создаете, постоянно остается под вашим контролем. Не имеет значения, сколько раз вы применили это заклинание, вы можете контролировать только по 4 КХП нежити за каждый уровень заклинателя. Если вы превышаете это количество, то все ново оживленные существа входят под ваш контроль, а превышающая ограничения нежить из прошлых активаций становится неуправляемой (Вы выбираете какие из существ будут неуправляемы). Если вы жрец, то любой мертвец который подчиняется вам благодаря вашей силы командования или подчинения нежити не учитывается в это ограничение. 
+Это заклинание превращает кости или тела умерших созданий в оживленных скелетов или зомби, которые подчиняются вашим словесным командам. Нежить может следовать за вами, оставаться на определённом месте или атаковать любое существо (или только специфические типы существ) входящие в неё. Поднятые мертвецы остаются до тех пор, пока их не уничтожат. (Уничтоженного скелета или зомби нельзя снова оживить.) 
 
-| | |
-|---|---|
-|Скелеты| Скелета можно создать лишь из целого трупа или скелета трупа. Труп при этом должен иметь кости (поэтому, к примеру, из пурпурного червя скелета поднять не возможно). Если скелет поднят из трупа, то плоть отпадает с костей. Параметры скелета зависят от его размера, и они не располагают теми возможностями, которыми существо обладало при жизни. Для большого ознакомления с деталями смотрите Справочник Монстров.|
-|Зомби| Для создания зомби вам понадобится цельный труп. Существо должно обладать анатомическим строением (к примеру, из желатинового куба зомби поднять не возможно). Параметры зомби зависят от его размера, и они не располагают теми возможностями, которыми существо обладало при жизни. Для большого ознакомления с деталями смотрите Справочник Монстров.|
+За одну активацию заклинания анимировать мертвого независимо от типа мертвеца, вы не можете создать КХП нежити больше, чем ваш двойной уровень заклинателя. (Заклинание [осквернить](осквернить.md) удваивает это количество). 
+
+Нежить, которую вы создаете, постоянно остается под вашим контролем. Не имеет значения, сколько раз вы применили это заклинание, вы можете контролировать только по 4 КХП нежити за каждый уровень заклинателя. Если вы превышаете это количество, то все ново оживленные существа входят под ваш контроль, а превышающая ограничения нежить из прошлых активаций становится неуправляемой (Вы выбираете какие из существ будут неуправляемы). Если вы жрец, то любой мертвец, который подчиняется вам благодаря вашей силы командования или подчинения нежити, не учитывается в это ограничение. 
+
+|         |                                                                                                                                                                                                                                                                                                                                                                                                                            |
+| ------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| Скелеты | Скелета можно создать лишь из целого трупа или скелета трупа. Труп при этом должен иметь кости (поэтому, к примеру, из пурпурного червя скелета поднять не возможно). Если скелет поднят из трупа, то плоть отпадает с костей. Параметры скелета зависят от его размера, и они не располагают теми возможностями, которыми существо обладало при жизни. Для большого ознакомления с деталями смотрите Справочник Монстров. |
+| Зомби   | Для создания зомби вам понадобится цельный труп. Существо должно обладать анатомическим строением (к примеру, из желатинового куба зомби поднять не возможно). Параметры зомби зависят от его размера, и они не располагают теми возможностями, которыми существо обладало при жизни. Для большого ознакомления с деталями смотрите Справочник Монстров.                                                                   |
 
