--- a/spells/анимировать-объект.md
+++ b/spells/анимировать-объект.md
@@ -1,38 +1,20 @@
 
 # Анимировать Объект
 
-| | |
-|---|---|
-|Тип|Превращение|
-|Уровень| Брд 6, Жр 6, Хаос 6|
-|Компоненты| В, С|
-|Время Активации| 1 стандартн. действ.|
-|Диапазон| Средний (30 м+3 м/ур.)|
-|Цель| Один Маленький объект за уровень заклинателя; смотрите текст|
-|Длительность| 1 раунд/уровень|
-|Спасбросок| Нет|
-|Устойчивость к Магии| Нет|
+|                      |                                                              |
+| -------------------- | ------------------------------------------------------------ |
+| Тип                  | Превращение                                                  |
+| Уровень              | Брд 6, Жр 6, Хаос 6                                          |
+| Компоненты           | В, С                                                         |
+| Время Активации      | 1 стандартн. действ.                                         |
+| Диапазон             | Средний (30 м+3 м/ур.)                                       |
+| Цель                 | Один Маленький объект за уровень заклинателя; смотрите текст |
+| Длительность         | 1 раунд/уровень                                              |
+| Спасбросок           | Нет                                                          |
+| Устойчивость к Магии | Нет                                                          |
 
-Вы наделяете неодушевленный предмет способностью передвигаться, и
-псевдопризнаками жизни. Оживленный предмет или предметы, нападают
-на кого-либо или что-либо, что вы изначально определили. Оживленный
-предмет должен быть из любых не
-магических материалов – дерева, металла, камня, ткани, кожи, керамики,
-стекла, и так далее. Вы можете анимировать один Маленький или меньший
-объект (стул к примеру) или эквивалентное количество более крупных
-объектов относительно вашего уровня
-заклинателя. Средний объект (вешал-
-ка) принимается как два Маленьких
-или меньших объекта, Большой объект
-(стол) как четыре, Огромный объект
-как восемь, Громадный как шестнадцать и Колоссальный как тридцать два.
-Вы способны изменять указанную цель
-или цели действием передвижения, как
-прицеливанием активного заклинания.
-Для большего ознакомления с деталями смотрите Справочник Монстров.
-Заклинание не оживляет предмет,
-находящийся в руках у существа или
-предмет, одетый на существо.
-Анимировать объект можно сделать
-постоянным при помощи заклинания
-постоянство.
+Вы наделяете неодушевленный предмет способностью передвигаться, и псевдопризнаками жизни. Оживленный предмет или предметы, нападают на кого-либо или что-либо, что вы изначально определили. Оживленный предмет должен быть из любых не магических материалов – дерева, металла, камня, ткани, кожи, керамики, стекла, и так далее. Вы можете анимировать один Маленький или меньший объект (стул к примеру) или эквивалентное количество более крупных объектов относительно вашего уровня заклинателя. Средний объект (вешалка) принимается как два Маленьких или меньших объекта, Большой объект (стол) как четыре, Огромный объект как восемь, Громадный как шестнадцать и Колоссальный как тридцать два. Вы способны изменять указанную цель или цели действием передвижения, как прицеливанием активного заклинания. 
+
+Для большего ознакомления с деталями смотрите Справочник Монстров. Заклинание не оживляет предмет, находящийся в руках у существа или предмет, одетый на существо. 
+
+Анимировать объект можно сделать постоянным при помощи заклинания [постоянство](постоянство.md).
