--- a/spells/безумие.md
+++ b/spells/безумие.md
@@ -1,16 +1,18 @@
 
 # Безумие
 
-| | |
-|---|---|
-|Тип|Очарование (Внушение) [Влияет на Разум]|
-|Уровень| Маг/Чар 7|
-|Компоненты| В, С|
-|Время Активации| 1 стандартн. действ.|
-|Диапазон| Средний (30 м+3 м/ур.)|
-|Цель| 1 живое существо|
-|Длительность| Мгновенно|
-|Спасбросок| Воля нейтрализует|
-|Устойчивость к Магии| Да|
+|                      |                                         |
+| -------------------- | --------------------------------------- |
+| Тип                  | Очарование (Внушение) [Влияет на Разум] |
+| Уровень              | Маг/Чар 7                               |
+| Компоненты           | В, С                                    |
+| Время Активации      | 1 стандартн. действ.                    |
+| Диапазон             | Средний (30 м+3 м/ур.)                  |
+| Цель                 | 1 живое существо                        |
+| Длительность         | Мгновенно                               |
+| Спасбросок           | Воля нейтрализует                       |
+| Устойчивость к Магии | Да                                      |
 
-Зачарованное существо страдает от продолжительного эффекта замешательство, наподобие эффекта заклинания с одноименным названием. Снять проклятие не излечивает безумие. Неограниченное восстановление, излечение, ограниченное желание, чудо или желание могут исцелить существо.
+Зачарованное существо страдает от продолжительного эффекта [замешательство](замешательство.md), наподобие эффекта заклинания с одноименным названием. 
+
+[Снять проклятие](снять-проклятие.md) не излечивает безумие. [Неограниченное восстановление](восстановление-неограниченное.md), [излечение](излечение.md), [ограниченное желание](ограниченное-желание.md), [чудо](чудо.md) или [желание](желание.md) могут исцелить существо.
