--- a/spells/благословение.md
+++ b/spells/благословение.md
@@ -1,16 +1,18 @@
 
 # Благословение
 
-| | |
-|---|---|
-|Тип|Очарование (Внушение) [Воздействует на разум]|
-|Уровень| Жр 1, Пал 1|
-|Компоненты| В, С, БФ|
-|Время Активации| 1 стандартн. действ.|
-|Диапазон| 15 м|
-|Зона Поражения| Заклинатель и все союзники в пределах 15 м, взрыва вокруг заклинателя|
-|Длительность| 1 минута/уровень|
-|Спасбросок| Нет|
-|Устойчивость к Магии| Да (безвредно)|
+|                      |                                                                       |
+| -------------------- | --------------------------------------------------------------------- |
+| Тип                  | Очарование (Внушение) [Воздействует на разум]                         |
+| Уровень              | Жр 1, Пал 1                                                           |
+| Компоненты           | В, С, БФ                                                              |
+| Время Активации      | 1 стандартн. действ.                                                  |
+| Диапазон             | 15 м                                                                  |
+| Зона Поражения       | Заклинатель и все союзники в пределах 15 м, взрыва вокруг заклинателя |
+| Длительность         | 1 минута/уровень                                                      |
+| Спасбросок           | Нет                                                                   |
+| Устойчивость к Магии | Да (безвредно)                                                        |
 
-Благословение наполняет ваших союзников мужеством. Каждый союзник получает бонус морали +1 ко всем броскам атаки и спасброскам против эффектов страха. Контрзаклинанием благословения и рассеивает заклинание чума.
+Благословение наполняет ваших союзников мужеством. Каждый союзник получает бонус морали +1 ко всем броскам атаки и спасброскам против эффектов страха. 
+
+Контрзаклинанием благословения и рассеивает заклинание [чума](чума.md).
