--- a/spells/болезненный-знак-змеи.md
+++ b/spells/болезненный-знак-змеи.md
@@ -14,4 +14,8 @@
 |Устойчивость к Магии| Нет|
 |Материальный Компонент| Порошкообразный янтарь стоимостью не менее 500 зм, чешуя любой змеи, и щепотка спор грибов.|
 
-Когда вы активируете заклинание болезненный знак змеи, в тексте одной из написанных работ, к примеру, книга, свиток или карта, появляется не большой символ. Текст, который содержит символ, должен состоять не менее чем из двадцати пяти слов. Когда кто-нибудь читает текст, содержащий символ, знак змеи приобретает форму живого существа и наносит удар читателю, обеспечивая ряд эффектов между символом и читателем. Предварительный просмотр текста на который еще не наложено заклинание не достаточен для обнаружения заклинания; существо должно обдуманно прочитать его. Существу позволяется сделать спасбросок, чтобы избежать удара змеи. Если он успешен, болезненный знак змеи рассеивается вспышкой коричневого цвета сопровождающейся облаком серовато коричневого дыма и громким шумом. Если цель проваливает свой спасбросок, ее поглощает пенистое янтарное поле силы и обездвиживает цель пока она не избавиться от него; поле исчезает или по вашей команде или по прошествию 1d4 дней + один за уровень заклинателя. Пока цель находится в янтарном поле силы, оно не взрослеет, не дышит, не питается, не спит, и не восстанавливает заклинания. Оно находиться в состоянии приостановленной жизни, не подозревая об его окружении. Существо возможно повредить внешними силами (и возможно даже убить), так как поле не обеспечивает защиту от физических повреждений. Хотя, умирая существо, не теряет хит-поинты или остается неизменным до окончания заклинания. Скрытый знак змеи не возможно обнаружить обыкновенным наблюдением и обнаружение магии показывает лишь то что текст излучает магию. Рассеивание магии может снять этот знак. Заклинание стереть уничтожает целую страницу текста. Болезненный знак змеи также можно активировать в комбинации с другими заклинаниями, которые скрывают или искажают текст, к примеру, потайная страница.
+Когда вы активируете заклинание болезненный знак змеи, в тексте одной из написанных работ, к примеру, книга, свиток или карта, появляется не большой символ. Текст, который содержит символ, должен состоять не менее чем из двадцати пяти слов. Когда кто-нибудь читает текст, содержащий символ, знак змеи приобретает форму живого существа и наносит удар читателю, обеспечивая ряд эффектов между символом и читателем. Предварительный просмотр текста на который еще не наложено заклинание не достаточен для обнаружения заклинания; существо должно обдуманно прочитать его. Существу позволяется сделать спасбросок, чтобы избежать удара змеи. Если он успешен, болезненный знак змеи рассеивается вспышкой коричневого цвета сопровождающейся облаком серовато коричневого дыма и громким шумом. Если цель проваливает свой спасбросок, ее поглощает пенистое янтарное поле силы и обездвиживает цель пока она не избавиться от него; поле исчезает или по вашей команде или по прошествию 1d4 дней + один за уровень заклинателя. 
+
+Пока цель находится в янтарном поле силы, оно не взрослеет, не дышит, не питается, не спит, и не восстанавливает заклинания. Оно находиться в состоянии приостановленной жизни, не подозревая об его окружении. Существо возможно повредить внешними силами (и возможно даже убить), так как поле не обеспечивает защиту от физических повреждений. Хотя, умирая существо, не теряет хит-поинты или остается неизменным до окончания заклинания. 
+
+Скрытый знак змеи не возможно обнаружить обыкновенным наблюдением и [обнаружение магии](обнаружение-магии.md) показывает лишь то что текст излучает магию. [Рассеивание магии](рассеивание-магии.md) может снять этот знак. Заклинание [стереть](стереть.md) уничтожает целую страницу текста. Болезненный знак змеи также можно активировать в комбинации с другими заклинаниями, которые скрывают или искажают текст, к примеру, [потайная страница](потайная-страница.md).
