--- a/spells/буря-мщения.md
+++ b/spells/буря-мщения.md
@@ -13,4 +13,14 @@
 |Спасбросок| Смотрите текст|
 |Устойчивость к Магии| Да|
 
-Это заклинание позволяет создать гигантское, черное штормовое облако. Вместе с бурей приходят удары грома, блеск молний. Каждое существо оказавшееся в зоне поражения облака, должно пройти спасбросок Стойкости или оглохнуть на 1d4×10 минут. Если вам не удается удержать концентрацию над заклинанием, то заклинание оканчивается. Если же вы продолжаете контролировать концентрацию, то оно вызывает дополнительные эффекты, которые описаны ниже. Каждый из эффектов происходит в ваш ход. |2-й Раунд| В зоне действия заклинания начинается кислотный дождь,| который причиняет 1d6 повреждений кислотой (без спасброска) |3-й Раунд| Вы призываете 6 зарядов| молний которые обрушиваются прямо с неба. Вы сами решаете, в какое место будет нанесен удар. Не более 2-х молний одновременно могут быть направлены на одну и ту же цель. Каждая молния наносит 10d6 пунктов повреждений электричеством. Существо ставшее целью одной из этих молний, может пройти спасбросок Рефлекса и получить лишь половину повреждений. |4-й Раунд| В зоне действия заклинания начинается дождь с градом, который причиняет 5d6 пунктов дробящего| повреждения (без спасброска). |5-й–10-й Раунд| Неистовый дождь| и ветер ухудшают видимость. Дождь ограничивает радиус любой видимости до 1,5 м, включая темновиденье. Все существа на расстоянии 1,5 м получают прикрытие (каждая атака имеет 20% шанса промаха). Атака существ стоящих далее имеет 50% шанс промаха, и атакующий не в состоянии точно определить местоположение свое цели с помощью зрения. Скорость передвижения снижена на три четверти. Стрелковые атаки в зоне поражения становятся невозможными. Все заклинания, применяемые в зоне действия бури будут прерваны, если заклинатель неудачно пройдет проверку навыка Концентрация. Проверка делается против КС равному КС спасброска бури мщения+уровень заклинания, которое хочет сактивировать заклинатель.
+Это заклинание позволяет создать гигантское, черное штормовое облако. Вместе с бурей приходят удары грома, блеск молний. Каждое существо оказавшееся в зоне поражения облака, должно пройти спасбросок Стойкости или оглохнуть на 1d4×10 минут. 
+
+Если вам не удается удержать концентрацию над заклинанием, то заклинание оканчивается. Если же вы продолжаете контролировать концентрацию, то оно вызывает дополнительные эффекты, которые описаны ниже. Каждый из эффектов происходит в ваш ход.
+
+2-й Раунд: В зоне действия заклинания начинается кислотный дождь,который причиняет 1d6 повреждений кислотой (без спасброска). 
+
+3-й Раунд: Вы призываете 6 зарядов молний которые обрушиваются прямо с неба. Вы сами решаете, в какое место будет нанесен удар. Не более 2-х молний одновременно могут быть направлены на одну и ту же цель. Каждая молния наносит 10d6 пунктов повреждений электричеством. Существо ставшее целью одной из этих молний, может пройти спасбросок Рефлекса и получить лишь половину повреждений.
+
+4-й Раунд: В зоне действия заклинания начинается дождь с градом, который причиняет 5d6 пунктов дробящего повреждения (без спасброска). 
+
+5-й–10-й Раунд: Неистовый дождь и ветер ухудшают видимость. Дождь ограничивает радиус любой видимости до 1,5 м, включая темновиденье. Все существа на расстоянии 1,5 м получают прикрытие (каждая атака имеет 20% шанса промаха). Атака существ стоящих далее имеет 50% шанс промаха, и атакующий не в состоянии точно определить местоположение свое цели с помощью зрения. Скорость передвижения снижена на три четверти. Стрелковые атаки в зоне поражения становятся невозможными. Все заклинания, применяемые в зоне действия бури будут прерваны, если заклинатель неудачно пройдет проверку навыка Концентрация. Проверка делается против КС равному КС спасброска бури мщения+уровень заклинания, которое хочет сактивировать заклинатель.
