--- a/spells/великое-созидание.md
+++ b/spells/великое-созидание.md
@@ -9,20 +9,14 @@
 |Диапазон| Ближний (7,5м.+1,5м./2 ур.)|
 |Длительность| Смотрите текст|
 
-Это заклинание работает как малое созидание, но вы также можете сотворять объекты с минеральной основой: камень, кристалл, металл или т.п. Длительность существования созданной вещи зависит от его прочности и редкости, как показано в таблице:
-Примеры Прочности и Редкости
-Растительная материя
-Камень, кристалл,
-основные металлы
-Драгоценные металлы
-Драгоценные камни
-Редкие металлы*
-
-Длительность
-2часа/уровень
-1 час/уровень
-20 мин./уровень
-10 мин./уровень
-1 раунд/уровень
-
-* Включая адамантин, алхимическое серебро и мифрил. Вы не можете использовать великое созидание, чтобы создавать вещи из холоднокованого железа. Смотрите Руководство Мастера Подземелий для дополнительных деталей.
+Это заклинание работает как [малое созидание](малое-созидание.md), но вы также можете сотворять объекты с минеральной основой: камень, кристалл, металл или т.п. Длительность существования созданной вещи зависит от его прочности и редкости, как показано в таблице:
+| Примеры Прочности и Редкости       | Длительность    |
+| ---------------------------------- | --------------- |
+| Растительная материя               | 2часа/уровень   |
+| Камень, кристалл, основные металлы | 1 час/уровень   |
+| Драгоценные металлы                | 20 мин./уровень |
+| Драгоценные камни                  | 10 мин./уровень |
+| Редкие металлы*                    | 1 раунд/уровень | 
+* Включая адамантин, алхимическое серебро и мифрил. 
+ 
+Вы не можете использовать великое созидание, чтобы создавать вещи из холоднокованого железа. Смотрите Руководство Мастера Подземелий для дополнительных деталей.
