--- a/spells/ветровое-передвижение.md
+++ b/spells/ветровое-передвижение.md
@@ -13,4 +13,8 @@
 |Спасбросок| Нет и Воля нейтрализует; смотрите текст (безвредно)|
 |Устойчивость к Магии| Нет и Да (безвредно)|
 
-Вы изменяете состояние своего тела в облаковидный пар (как в заклинании газообразная форма), и передвигаетесь по воздуху, возможно при очень высокой скорости. Вы можете взять с собой и других существ, каждое из которых дейтсвует независимо от вас. Обычно передвигающийся по ветру летит со скоростью 3 м с превосходной маневренностью. По желании субъекта, магический ветер может ускорить передвигающегося по ветру до 180 м в раунд (около 100 км./час) с плохой маневренностью. Передвигающиеся по ветру невидимы, но выглядят как туманные и полупрозрачные облака. Если они полностью одеты в белое, существует 80%, что они будут ошибочно приняты за облака, туман, пар и т.д. Передвигающийся по ветру может снова принять свой физический облик, а потом по желании вновь принять форму облака. Каждое изменение в и из формы облака длится 5 раундов, которые учитываются в длительность заклинания (как и время проведенное в физическом облике). Как было отмечено выше, вы можете добровольно прервать заклинание, или же прервать его для отдельного передвигающегося по ветру, а не для всех сразу. В последнюю минуту действия заклинания передвигающийся по ветру автоматически опускается на землю со скоростью 18 м в раунд (общим количеством 180 м), хотя при желании он может приземляться и с большей скоростью. Это приземление служит предупреждением окончания заклинания.
+Вы изменяете состояние своего тела в облаковидный пар (как в заклинании [газообразная форма](газообразная-форма.md)), и передвигаетесь по воздуху, возможно при очень высокой скорости. Вы можете взять с собой и других существ, каждое из которых дейтсвует независимо от вас. Обычно передвигающийся по ветру летит со скоростью 3 м с превосходной маневренностью. По желании субъекта, магический ветер может ускорить передвигающегося по ветру до 180 м в раунд (около 100 км./час) с плохой маневренностью. 
+
+Передвигающиеся по ветру невидимы, но выглядят как туманные и полупрозрачные облака. Если они полностью одеты в белое, существует 80%, что они будут ошибочно приняты за облака, туман, пар и т.д. Передвигающийся по ветру может снова принять свой физический облик, а потом по желании вновь принять форму облака. Каждое изменение в и из формы облака длится 5 раундов, которые учитываются в длительность заклинания (как и время проведенное в физическом облике). Как было отмечено выше, вы можете добровольно прервать заклинание, или же прервать его для отдельного передвигающегося по ветру, а не для всех сразу. 
+
+В последнюю минуту действия заклинания передвигающийся по ветру автоматически опускается на землю со скоростью 18 м в раунд (общим количеством 180 м), хотя при желании он может приземляться и с большей скоростью. Это приземление служит предупреждением окончания заклинания.
