--- a/spells/видеть-невидимое.md
+++ b/spells/видеть-невидимое.md
@@ -12,4 +12,8 @@
 |Длительность| 10 мин./уровень (П)|
 |Материальный Компонент| Щепотка талька и немного разбрызгиваемого измельченного серебра.|
 
-Вы можете видеть любые невидимые объекты и существа, которые попадают в пределы вашего зрения, а также эфирные создания, так, будто они нормально видимы. Эти существо изображаются перед вами в виде прозрачных образов, позволяя вам отличить видимых, невидимых и эфирных существ. Это заклинание не раскрывает для вас метод, благодаря которому существо стало невидимым. Оно также не указывает на иллюзии, или позволяет вам видеть сквозь непрозрачные объекты. Оно не раскрывает просто скрывающихся существ, или сидящих в укрытии, или которых тяжело увидетьпо иным причинам. Видеть невидимое может быть постоянным, если его применить вместе с заклинанием постоянство.
+Вы можете видеть любые невидимые объекты и существа, которые попадают в пределы вашего зрения, а также эфирные создания, так, будто они нормально видимы. Эти существо изображаются перед вами в виде прозрачных образов, позволяя вам отличить видимых, невидимых и эфирных существ. 
+
+Это заклинание не раскрывает для вас метод, благодаря которому существо стало невидимым. Оно также не указывает на иллюзии, или позволяет вам видеть сквозь непрозрачные объекты. Оно не раскрывает просто скрывающихся существ, или сидящих в укрытии, или которых тяжело увидетьпо иным причинам. 
+
+Видеть невидимое может быть постоянным, если его применить вместе с заклинанием постоянство.
