--- a/spells/воззреть-оружие.md
+++ b/spells/воззреть-оружие.md
@@ -13,4 +13,8 @@
 |Спасбросок| Воля Нейтрализует (безвредно, объект)|
 |Устойчивость к Магии| Да (безвредно, объект)|
 
-На ваш выбор это заклинание способно сделать оружие добрым, злым, законным или хаотичным. Заколдованное оружие может избегать снижение повреждений у определенных существ, обычно внешних противоположного мировоззрения. Это заклинание не воздействует на оружие, которое уже имеет мировоззрение, к примеру, святой меч. Вы не способны активировать это заклинание на природное оружие, такое как невооруженный удар. Когда вы делаете оружие добрым, злым, законным или хаотическим, соответственно само заклинание воззрение оружия становится добрым, злым, законным или хаотическим заклинанием.
+На ваш выбор это заклинание способно сделать оружие добрым, злым, законным или хаотичным. Заколдованное оружие может избегать снижение повреждений у определенных существ, обычно внешних противоположного мировоззрения. Это заклинание не воздействует на оружие, которое уже имеет мировоззрение, к примеру, святой меч. 
+
+Вы не способны активировать это заклинание на природное оружие, такое как невооруженный удар. 
+
+Когда вы делаете оружие добрым, злым, законным или хаотическим, соответственно само заклинание воззрение оружия становится добрым, злым, законным или хаотическим заклинанием.
