--- a/spells/волшебная-метка.md
+++ b/spells/волшебная-метка.md
@@ -13,4 +13,4 @@
 |Спасбросок| Нет|
 |Устойчивость к Магии| Нет|
 
-Это заклинание позволяет вам писать собственные руны или метки, которые должны состоять не более чем из 6 знаков. Надпись может быть видимой или невидимой. Заклинание волшебная метка дает вам возможность наносить руны на любую поверхность, (даже на камень или металл) при этом, не нанося никакого вреда материалу на который нанесена метка. Если вы нанесли невидимую метку, то заклинание обнаружение магии заставляет ее светится, и она становится видимой (хотя не обязательно понятной). Видеть невидимое, истинное зрение, изумруд видений, или роба глаз также позволяет их пользователям видеть невидимые волшебные метки. Заклинание чтение магии показывает любые слова. Метку нельзя рассеять, но ее может снять заклинатель или заклинание стереть. Если заклинание было применено на живое существо, то она, постепенно стираясь, исчезает примерно через месяц. Волшебная метка должна быть наложена на объект, до того как на него будет применено заклинание мгновенный призыв Драумиджа (для большого ознакомления с заклинанием смотрите его описание).
+Это заклинание позволяет вам писать собственные руны или метки, которые должны состоять не более чем из 6 знаков. Надпись может быть видимой или невидимой. Заклинание волшебная метка дает вам возможность наносить руны на любую поверхность, (даже на камень или металл) при этом, не нанося никакого вреда материалу на который нанесена метка. Если вы нанесли невидимую метку, то заклинание обнаружение магии заставляет ее светится, и она становится видимой (хотя не обязательно понятной). Видеть невидимое, истинное зрение, изумруд видений, или роба глаз также позволяет их пользователям видеть невидимые волшебные метки. Заклинание чтение магии показывает любые слова. Метку нельзя рассеять, но ее может снять заклинатель или заклинание стереть. Если заклинание было применено на живое существо, то она, постепенно стираясь, исчезает примерно через месяц. Волшебная метка должна быть наложена на объект, до того как на него будет применено заклинание [мгновенный призыв Драумиджа](мгновенный-призыв-драумиджа.md) (для большого ознакомления с заклинанием смотрите его описание).
