--- a/spells/волшебный-взор-неограниченный.md
+++ b/spells/волшебный-взор-неограниченный.md
@@ -5,4 +5,6 @@
 |Тип|Ворожба|
 |Уровень| Маг/Чар 7|
 
-Это заклинание действует также как и заклинание волшебный взор, за исключением того, что вы автоматически узнаете какое заклинание или магический эффект действует на любом существе или предмете, который вы видите. Неограниченный волшебный взор не дает вам возможности идентифицировать магические предметы. В отличие от волшебного взора, это заклинание не может быть постоянным, даже после наложения заклинания постоянство.
+Это заклинание действует также как и заклинание [волшебный взор](волшебный-взор.md), за исключением того, что вы автоматически узнаете какое заклинание или магический эффект действует на любом существе или предмете, который вы видите. 
+
+Неограниченный волшебный взор не дает вам возможности идентифицировать магические предметы. В отличие от волшебного взора, это заклинание не может быть постоянным, даже после наложения заклинания постоянство.
