--- a/spells/волшебный-взор.md
+++ b/spells/волшебный-взор.md
@@ -11,5 +11,11 @@
 |Цель| Вы|
 |Длительность| 1 минута/уровень (П)|
 
-Это заклинание делает так, что ваши глаза излучают голубой свет и позволяют вам видеть магические ауры в пределах 36 м от вас. Эффект похожий на эффект заклинания определение магии, но в отличие от него волшебное зрение не требует концентрации и быстрее определяет расположение ауры и магической силы. В поле вашего зрения вы знаете расположение и силу всех магических аур. Сила ауры зависит от функционального уровня заклинания или уровня заклинателя предмета, это описано в примечании к заклинанию обнаружение магии (стр. 239). Если существо или предмет, имеет какую то ауру, которая находится в пределах вашего зрения, вы способны произвести проверку Искусства Магии, чтобы определить, какая использовалась школа магии. (Сделайте одну проверку для каждой ауры; КС 15 + уровень заклинания, или 15 + половину уровня заклинателя для эффектов не от заклинаний). Если вы концентрируетесь на определенном существе в пределах 36 м от вас, как стандартн. действ. вы способны определить любую подобную заклинанию способность или любую способность активирования заклинания, если они волшебные или жреческие (подобные заклинаниям способности фиксируются, как волшебные), и силу самого мощного заклинания или немедленно определить подобную заклинаню способность существа доступную для использования. В некоторых случаях, волшебный взор способен дать дополнительную незначительную информацию во время определения – к примеру, если вы используете его на заклинателя, который использовал большинство из нормы своих ежедневных слотов заклинаний. Волшебный взор, возможно, использовать долговременно, но ранее сактивировав заклинание постоянство.
+Это заклинание делает так, что ваши глаза излучают голубой свет и позволяют вам видеть магические ауры в пределах 36 м от вас. Эффект похожий на эффект заклинания [определение магии](обнаружение-магии.md), но в отличие от него волшебное зрение не требует концентрации и быстрее определяет расположение ауры и магической силы. 
+
+В поле вашего зрения вы знаете расположение и силу всех магических аур. Сила ауры зависит от функционального уровня заклинания или уровня заклинателя предмета, это описано в примечании к заклинанию обнаружение магии (стр. 239). Если существо или предмет, имеет какую то ауру, которая находится в пределах вашего зрения, вы способны произвести проверку Искусства Магии, чтобы определить, какая использовалась школа магии. (Сделайте одну проверку для каждой ауры; КС 15 + уровень заклинания, или 15 + половину уровня заклинателя для эффектов не от заклинаний).
+
+Если вы концентрируетесь на определенном существе в пределах 36 м от вас, как стандартн. действ. вы способны определить любую подобную заклинанию способность или любую способность активирования заклинания, если они волшебные или жреческие (подобные заклинаниям способности фиксируются, как волшебные), и силу самого мощного заклинания или немедленно определить подобную заклинаню способность существа доступную для использования. В некоторых случаях, волшебный взор способен дать дополнительную незначительную информацию во время определения – к примеру, если вы используете его на заклинателя, который использовал большинство из нормы своих ежедневных слотов заклинаний.
+
+Волшебный взор, возможно, использовать долговременно, но ранее сактивировав заклинание постоянство.
 
