--- a/spells/врата.md
+++ b/spells/врата.md
@@ -14,4 +14,26 @@
 |Устойчивость к Магии| Нет|
 |Стоимость в Оп| 1000 Оп (только при функции призыва существ).|
 
-Активация заклинания врата несёт с |собой два эффекта. Первый| создания| межизмерительного соединения между вашим планом местонахождения, указанным вами планом, позволяя путешествовать между этими двумя планами в |обоих направлениях. Второй| вы способны призвать определенную особу| или личность через врата. Сами по себе врата – кругообразный обруч или диск, диаметром от 1,5 до 6 метров (выбор заклинателя), ориентированный в направление по вашему желанию при его создании (обычно вертикально, и лицом к вам). Внешне – двупространственное окно, открывающееся в план указанный вами при активации, и любое или любой, кто пройдёт через него, мгновенно переместится на противоположную сторону. У врат есть перед и зад. Существа передвигающиеся через перед врат транспортируются на иной палн; существа проходящие через заднюю часть, не перемещаются. |Планарное Путешествие| Врата| функционируют как разновидность планарных путешествий, наподобие заклинания смещение планов, за исключением того, что врата непосредственно в указанную вами точку (эффект создания). Боги и иные существа, управлющие планарными королевствами, способны предотвратить открытие врат при их присутствии, или не дать разрешение на их появление. Путешественникам не нужно прикосаться к вам руками, чтобы перейти через врата, им достаточно лишь перешагнуть через них. Врата не могут быть открыты в иное место того же плана; заклинание действует лишь для межпланарных путешествий. Вы можете расположите врата в коридоре, что они поглотили любую атаку или силу приближающуюся к вам, перенося её на иной план. Воспримут ли нормально такую тактику жители иного плана, это уже отдельный вопрос. Вы можете удерживать открытыми врата лишь определённое время (не более чем, 1 раунд за уровень заклинателя), и при поддержке вам необходимо сконцентрироваться на открытии, иначе межпланарное соединение разорвётся. |Призыв Существ| Вторым эффектом заклинания врата является возможность призыва к себе на помощь| экстраланарных существ (эффект призыва). Произнося вслух конкретное имя или название существа при активации заклинания, вы делаете так, что врата открываются около необходимого вам существа, и вталкивают его через врата добровольно или нет. Боги и уникальные существа не могут попадать под эффект перехода через врата, хотя могут проходить через них при собственном желании. Это применение заклинания создает врата, которые существуют до тех пор, пока действуют призванные существа. Применение в таком роде заклинания, требует затрат Оп (смотрите ниже). Если вы хотите призвать какой-то вид существ, а не отдельную особь, к примеру не бородатого дьявола или эладрина гхаэля, а просто вызвать одно существо (С количеством КХП) или нескольких существ. Вы способны призывать и контролировать такое количество существ, пока их КХП не превышает ваш уровень заклинателя. Одно существо, у которого количество КХП превышает в два раза ваш уровень заклинателя, не может попасть под ваш контроль. Не контролируемые существа действуют по своему усмотрению, и призыв таких существ может быть весьма опасным. Неконтролируемое существо может быть вернутым на свой родной план в любое время. |Контролируемому существу вы можете отдавать приказы. Эти приказы могут быть двух видов| незамедлительные| действия и контракты. Сражение на вашей стороне в одной битве, или выполнение иных действий занимающих по времени не более 1 раунд/уровень заклинателя, принимаются как незамедлительные действия; вам нет нужды выполнять какие-либо соглашения, или платы награды за помощь существа. В конце заклинания существо удаляется назад. Если вы выбираете более долгую и продолжительную форму услуги от призванного существа, вы должны чтото предложить в форме платы за выполнение службы. Плата должна быть соответствующей требуемой услуге; смотрите описание заклинания младший планарный союзник относительно вознаграждений. (Некоторые существа пожелают платы в виде «живого товара» вместо монет, что может вызвать осложнения). Сразу же после выполнения услуги, существо транспортируется к вам, и вы в свою очередь обязаны выплатить его плату. После этого существо освобождается, и немедленно возвращается на свой родной план. Неудача при выполнении платы существу, может повлечь за собой не выполнение в дальнейшем услуг со стороны существа и представителей его вида, а что ещё хуже, существо или его вид может напасть на вас. |К вниманию| Когда вы применяете| это заклинание, как заклинание призыва чтобы вызвать воздушных, хаотичных, земных, злых, огненных, добрых, законных или водных существ, оно становится заклинанием этого типа. К примеру, врата призвавшие демона – хаотичное и злое заклинание.
+Активация заклинания врата несёт с собой два эффекта. Первый: создания межизмерительного соединения между вашим планом местонахождения, указанным вами планом, позволяя путешествовать между этими двумя планами в обоих направлениях. Второй: вы способны призвать определенную особу или личность через врата.
+
+Сами по себе врата – кругообразный обруч или диск, диаметром от 1,5 до 6 метров (выбор заклинателя), ориентированный в направление по вашему желанию при его создании (обычно вертикально, и лицом к вам). Внешне – двупространственное окно, открывающееся в план указанный вами при активации, и любое или любой, кто пройдёт через него, мгновенно переместится на противоположную сторону.
+
+У врат есть перед и зад. Существа передвигающиеся через перед врат транспортируются на иной палн; существа проходящие через заднюю часть, не перемещаются.
+
+Планарное Путешествие: Врата функционируют как разновидность планарных путешествий, наподобие заклинания смещение планов, за исключением того, что врата непосредственно в указанную вами точку (эффект создания). Боги и иные существа, управлющие планарными королевствами, способны предотвратить открытие врат при их присутствии, или не дать разрешение на их появление. Путешественникам не нужно прикосаться к вам руками, чтобы перейти через врата, им достаточно лишь перешагнуть через них. Врата не могут быть открыты в иное место того же плана; заклинание действует лишь для межпланарных путешествий.
+
+Вы можете расположите врата в коридоре, что они поглотили любую атаку или силу приближающуюся к вам, перенося её на иной план. Воспримут ли нормально такую тактику жители иного плана, это уже отдельный вопрос. 
+
+Вы можете удерживать открытыми врата лишь определённое время (не более чем, 1 раунд за уровень заклинателя), и при поддержке вам необходимо сконцентрироваться на открытии, иначе межпланарное соединение разорвётся.
+
+Призыв Существ: Вторым эффектом заклинания врата является возможность призыва к себе на помощь экстраланарных существ (эффект призыва). Произнося вслух конкретное имя или название существа при активации заклинания, вы делаете так, что врата открываются около необходимого вам существа, и вталкивают его через врата добровольно или нет. Боги и уникальные существа не могут попадать под эффект перехода через врата, хотя могут проходить через них при собственном желании. Это применение заклинания создает врата, которые существуют до тех пор, пока действуют призванные существа. Применение в таком роде заклинания, требует затрат Оп (смотрите ниже). 
+
+Если вы хотите призвать какой-то вид существ, а не отдельную особь, к примеру не бородатого дьявола или эладрина гхаэля, а просто вызвать одно существо (С количеством КХП) или нескольких существ. Вы способны призывать и контролировать такое количество существ, пока их КХП не превышает ваш уровень заклинателя. Одно существо, у которого количество КХП превышает в два раза ваш уровень заклинателя, не может попасть под ваш контроль. Не контролируемые существа действуют по своему усмотрению, и призыв таких существ может быть весьма опасным. Неконтролируемое существо может быть вернутым на свой родной план в любое время. 
+
+Контролируемому существу вы можете отдавать приказы. Эти приказы могут быть двух видов: незамедлительные действия и контракты. Сражение на вашей стороне в одной битве, или выполнение иных действий занимающих по времени не более 1 раунд/уровень заклинателя, принимаются как незамедлительные действия; вам нет нужды выполнять какие-либо соглашения, или платы награды за помощь существа. В конце заклинания существо удаляется назад. 
+
+Если вы выбираете более долгую и продолжительную форму услуги от призванного существа, вы должны чтото предложить в форме платы за выполнение службы. Плата должна быть соответствующей требуемой услуге; смотрите описание заклинания [младший планарный союзник](планарный-союзник-ограниченный.md) относительно вознаграждений. (Некоторые существа пожелают платы в виде «живого товара» вместо монет, что может вызвать осложнения). Сразу же после выполнения услуги, существо транспортируется к вам, и вы в свою очередь обязаны выплатить его плату. После этого существо освобождается, и немедленно возвращается на свой родной план.
+
+Неудача при выполнении платы существу, может повлечь за собой не выполнение в дальнейшем услуг со стороны существа и представителей его вида, а что ещё хуже, существо или его вид может напасть на вас. 
+
+К вниманию: Когда вы применяете это заклинание, как заклинание призыва чтобы вызвать воздушных, хаотичных, земных, злых, огненных, добрых, законных или водных существ, оно становится заклинанием этого типа. К примеру, врата призвавшие демона – хаотичное и злое заклинание.
