--- a/spells/временный-застой.md
+++ b/spells/временный-застой.md
@@ -14,4 +14,4 @@
 |Устойчивость к Магии| Да|
 |Материальные Компоненты| Смесь из измельченных в пыль бриллиантов, рубинов, изумрудов и сапфиров на общую сумму не менее 5000 зм.|
 
-Вы должны провести одну успешную рукопашную касательную атаку. Вы помещаете объект в состояние заторможенного существования. Для этого существа, время замедляется, а его состояние становится фиксированным. На существо не действуют эффекты старения. Все функции его тела перестают работать и никакая сила или эффекты не могут повредить им. Это состояние продолжается до тех пор пока заклинание не будет снято при помощи магии (например при удачном применении заклинания рассеивание магии или заклинания свобода ).
+Вы должны провести одну успешную рукопашную касательную атаку. Вы помещаете объект в состояние заторможенного существования. Для этого существа, время замедляется, а его состояние становится фиксированным. На существо не действуют эффекты старения. Все функции его тела перестают работать и никакая сила или эффекты не могут повредить им. Это состояние продолжается до тех пор пока заклинание не будет снято при помощи магии (например при удачном применении заклинания [рассеивание магии](рассеивание-магии.md) или заклинания [свобода](свобода.md) ).
