--- a/spells/вуаль.md
+++ b/spells/вуаль.md
@@ -13,4 +13,6 @@
 |Спасбросок| Воля нейтрализует; смотрите текст|
 |Устойчивость к Магии| Да; смотрите текст|
 
-Вы мгновенно можете изменить внешний вид субъекта и затем поддерживать его в течение длительности действия эффектов заклинания. Вы можете придать цели любой вид, какой вам только вздумается. Вы можете придать вашей группе вид группы маленьких фей возглавляемой триантом. Субъекты выглядят, как внешне так и на ощупь и запах, как настоящие. Если существо ставшее целью заклинания вуаль будет убито, то оно принимает свой настоящий облик. Для того чтобы создать точную копию специфической персоны, вам необходимо пройти проверку навыка Маскировка. Это заклинание дает вам бонус +10 бонус проверке. Не желающее существо может нейтрализовать эффект заклинания, пройдя успешный спасбросок Воли или применив устойчивость к магии. Те, кто взаимодействуют с субъектом, могут совершить спасбросок Воли (неверие) и увидеть сквозь чары истинную форму цели, однако устойчивость к магии в этом случае не имеет никакого эффекта.
+Вы мгновенно можете изменить внешний вид субъекта и затем поддерживать его в течение длительности действия эффектов заклинания. Вы можете придать цели любой вид, какой вам только вздумается. Вы можете придать вашей группе вид группы маленьких фей возглавляемой триантом. Субъекты выглядят, как внешне так и на ощупь и запах, как настоящие. Если существо ставшее целью заклинания вуаль будет убито, то оно принимает свой настоящий облик. Для того чтобы создать точную копию специфической персоны, вам необходимо пройти проверку навыка Маскировка. Это заклинание дает вам бонус +10 бонус проверке.
+
+Не желающее существо может нейтрализовать эффект заклинания, пройдя успешный спасбросок Воли или применив устойчивость к магии. Те, кто взаимодействуют с субъектом, могут совершить спасбросок Воли (неверие) и увидеть сквозь чары истинную форму цели, однако устойчивость к магии в этом случае не имеет никакого эффекта.
