--- a/spells/вылепить-звук.md
+++ b/spells/вылепить-звук.md
@@ -13,4 +13,8 @@
 |Спасбросок| Воля нейтрализует (объект)|
 |Устойчивость к Магии| Да (объект)|
 
-Вы изменяете звуки, издаваемые существами или какими либо объектами. Вы можете создать звук там где его на самом деле нет (например, заставить дерево петь), или наоборот убрать его там где он есть (например, сделав перемещение партии бесшумным), или же изменить существующий звук на какой либо иной (например, заставить заклинателя хрюкать). Если вы уже совершили преобразование, изменить его вы еже не в силах. Вы сможете изменять качество звуков однако не сможете создать те слова, с которыми вы не знакомы. Например, вы не можете активировать магические предметы, с командным словом изменив свой голос, для этого вам потребуется знать командное слово. Заклинатель чей голос был изменен (как в случае с поросячьим хрюканьем к примеру), не может колдовать заклинания в которых присутствует вербальный компонент.
+Вы изменяете звуки, издаваемые существами или какими либо объектами. Вы можете создать звук там где его на самом деле нет (например, заставить дерево петь), или наоборот убрать его там где он есть (например, сделав перемещение партии бесшумным), или же изменить существующий звук на какой либо иной (например, заставить заклинателя хрюкать). Если вы уже совершили преобразование, изменить его вы уже не в силах.
+
+Вы сможете изменять качество звуков однако не сможете создать те слова, с которыми вы не знакомы. Например, вы не можете активировать магические предметы, с командным словом изменив свой голос, для этого вам потребуется знать командное слово.
+
+Заклинатель чей голос был изменен (как в случае с поросячьим хрюканьем к примеру), не может колдовать заклинания в которых присутствует вербальный компонент.
