--- a/spells/выносливость-медведя-массовая.md
+++ b/spells/выносливость-медведя-массовая.md
@@ -7,4 +7,4 @@
 |Диапазон| Ближний (7,5 м +1,5 м/2 ур.)|
 |Цели| Одно существо/уровень, расстояние между двумя не более 9 м|
 
-Массовая выносливость медведя работает также как и выносливость медведя за исключением того, что эффект распространяется на нескольких существ.
+Массовая выносливость медведя работает также как и [выносливость медведя](выносливость-медведя.md) за исключением того, что эффект распространяется на нескольких существ.
