--- a/spells/выносливость-медведя.md
+++ b/spells/выносливость-медведя.md
@@ -13,5 +13,7 @@
 |Спасбросок| Воля Нейтрализует (безвредно)|
 |Устойчивость к Магии| Да|
 
-Существо, находящееся под эффектом этого заклинания получает больше жизненной энергии и его стойкость по вышается. Заклинания дает существу +4 бонус заколдованности к Телосложению, которое дает преимущества в хитпоинтах, спасбросках Стойкости, проверках Телосложения и т.д. Хит-поинты которые получает существо, во время временного повышения Стойкости не являются временными хит-поинтами. Они исчезают, когда Стойкость существа становится нормальной. Они не теряются первыми, как временные хит-поинты (смотрите стр. 1__).
+Существо, находящееся под эффектом этого заклинания получает больше жизненной энергии и его стойкость повышается. Заклинания дает существу +4 бонус заколдованности к Телосложению, которое дает преимущества в хитпоинтах, спасбросках Стойкости, проверках Телосложения и т.д. 
+
+Хит-поинты которые получает существо, во время временного повышения Стойкости не являются временными хит-поинтами. Они исчезают, когда Стойкость существа становится нормальной. Они не теряются первыми, как временные хит-поинты (смотрите стр. 1__).
 
