--- a/spells/высасывание-энергии.md
+++ b/spells/высасывание-энергии.md
@@ -6,4 +6,8 @@
 |Тип| Некромантия|
 |Уровень| Жр 9, Маг/Чар 9|
 |Спасбросок| Стойкость частично; смотрите описание заклинания [бессилие](./бессилие.md)|
-Это заклинание действует как и бессилие, за исключением того, что существо переносит 2d4 негативных уровня, и негативные уровни длятся значительно дольше. Для избежания негативных уровней спасброска нет, но спустя 24 часа после их получения, субъект обязан пройти спасбросок Стойкости (КС=высасывание энергии+КС спасброска заклинания) для каждого из негативных уровней. Если спасбросок успешен, негативный уровень снят. Если спасбросок неудачен, то негативный уровень проходит, но один из уровней персонажа субъекта навсегда высосан. Нежить, по которой попал этот луч, получает 2d4×5 временных хит-поинтов на один час.
+Это заклинание действует как и [бессилие](бессилие.md), за исключением того, что существо переносит 2d4 негативных уровня, и негативные уровни длятся значительно дольше. 
+
+Для избежания негативных уровней спасброска нет, но спустя 24 часа после их получения, субъект обязан пройти спасбросок Стойкости (КС=высасывание энергии+КС спасброска заклинания) для каждого из негативных уровней. Если спасбросок успешен, негативный уровень снят. Если спасбросок неудачен, то негативный уровень проходит, но один из уровней персонажа субъекта навсегда высосан.
+
+Нежить, по которой попал этот луч, получает 2d4×5 временных хит-поинтов на один час.
