--- a/spells/богохульство.md
+++ b/spells/богохульство.md
@@ -1,32 +1,35 @@
 
 # Богохульство
 
-| | |
-|---|---|
-|Тип|Заклятие [Звуковое, Зло]|
-|Уровень| Жр 7, Зло 7|
-|Компоненты| В|
-|Время Активации| 1 стандартн. действ.|
-|Диапазон| 12 м|
-|Зона Поражения| Незлые существа в радиусе 12 м от вас – радиус центрового расширения|
-|Длительность| Мгновенно|
-|Спасбросок| Нет или Воля Нейтрализует|
-|Устойчивость к Магии| Да|
+|                      |                                                                      |
+| -------------------- | -------------------------------------------------------------------- |
+| Тип                  | Заклятие [Звуковое, Зло]                                             |
+| Уровень              | Жр 7, Зло 7                                                          |
+| Компоненты           | В                                                                    |
+| Время Активации      | 1 стандартн. действ.                                                 |
+| Диапазон             | 12 м                                                                 |
+| Зона Поражения       | Незлые существа в радиусе 12 м от вас – радиус центрового расширения |
+| Длительность         | Мгновенно                                                            |
+| Спасбросок           | Нет или Воля Нейтрализует                                            |
+| Устойчивость к Магии | Да                                                                   |
 
 Любое незлое существо находящиеся в области воздействия заклинания богохульство страдает от следующих плохих эффектов:
 
-КХП
-Равен уровню
-заклинателя
-Ниже уровня
-заклинателя на –1
-Ниже уровня
-заклинателя на –5
-Ниже уровня
-заклинателя на –10
+| КХП                            | Эффект                               |
+| ------------------------------ | ------------------------------------ |
+| Ниже уровня заклинателя на –1  | Слабость, Изумление                  |
+| Ниже уровня заклинателя на –5  | Паралич, слабость, изумление         | 
+| Ниже уровня заклинателя на –10 | Смерть, паралич, слабость, изумление |
 
-Эффект
-Изумление
+Эффекты последовательны и налаживаются друг на друга. Нет таких спасбросков, которые позволили бы избежать этих эффектов. 
 
-Слабость, изумление Паралич, слабость, изумление Смерть, паралич, слабость, изумление
-Эффекты последовательны и налаживаются друг на друга. Нет таких спасбросков, которые позволили бы избежать этих эффектов. |Изумление| Существо бездействует| на протяжении одного раунда, хотя оно может нормально защищаться. |Слабость| На 2d4 раунда, Сила существа уменьшается на 2d6 пунктов.| |Паралич| Существо парализовано и| беспомощно на 1d10 раундов. |Смерть| Живые существа умирают.| Нежить разрушается. Более того, если при активации этого заклинания вы находитесь в своем родном плане, незлые экстрапланарные существа находящиеся в пределах этого заклинания немедленно изгоняются в свой родной план. Изгнанные существа не способны вернуться обратно на протяжении 24 часов. Этот эффект все равно воздействует на существо даже если оно не слышало заклинание богохульство. Эффект изгнания нейтрализуется спасброском Воли (учитывая штраф –4). Существа, чьи КХП превышают вашуровень заклинателя, не поддаются эффектам заклинания.
+|           |                                                                                         |
+| --------- | --------------------------------------------------------------------------------------- |
+| Изумление | Существо бездействует на протяжении одного раунда, хотя оно может нормально защищаться. |
+| Слабость  | На 2d4 раунда, Сила существа уменьшается на 2d6 пунктов.                                |
+| Паралич   | Существо парализовано и беспомощно на 1d10 раундов.                                     |
+| Смерть    | Живые существа умирают. Нежить разрушается.                                             | 
+
+Более того, если при активации этого заклинания вы находитесь в своем родном плане, незлые экстрапланарные существа находящиеся в пределах этого заклинания немедленно изгоняются в свой родной план. Изгнанные существа не способны вернуться обратно на протяжении 24 часов. Этот эффект все равно воздействует на существо даже если оно не слышало заклинание богохульство. Эффект изгнания нейтрализуется спасброском Воли (учитывая штраф –4). 
+
+Существа, чьи КХП превышают ваш уровень заклинателя, не поддаются эффектам заклинания.
